--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ipykernel = "^6.27.1"
 neo4j = "^5.15.0"
 openai = "0.28"
 rdflib = "^7.0.0"
+graphviz = "^0.20.3"
 
 [build-system]
 requires = ["poetry-core"]
